--- a/app/src/main/res/drawable/unselected_side_btn.xml
+++ b/app/src/main/res/drawable/unselected_side_btn.xml
@@ -2,12 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" /> <!-- Adjust the radius as per your design -->
-    <solid android:color="#004080" />
+    <solid android:color="#00FFFFFF" />
     <padding
         android:left="8dp"
         android:right="8dp"
         android:top="8dp"
         android:bottom="8dp"/>
 </shape>
-
-
