--- a/app/src/main/res/layout/sidebar_item.xml
+++ b/app/src/main/res/layout/sidebar_item.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sidebarItemLayout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
