--- a/app/src/main/res/layout/sidebar_layout.xml
+++ b/app/src/main/res/layout/sidebar_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="100dp"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_alignParentStart="true"
     android:background="#FFFFFF"
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/icon1"
-            android:layout_width="86dp"
-            android:layout_height="86dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:contentDescription="@string/chickenjoy"
             android:src="@drawable/chikenjoy_logo" />
@@ -27,7 +27,8 @@
             android:id="@+id/sidebarRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="32dp"
             tools:listitem="@layout/sidebar_item"
             />
     </LinearLayout>
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
         android:orientation="vertical"
+        android:layout_gravity="center"
         >
 
         <ImageView
