--- a/app/src/main/res/layout/item_menu_dashboard.xml
+++ b/app/src/main/res/layout/item_menu_dashboard.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_margin="10dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
                 android:id="@+id/textViewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title"
+                android:text="Nasi Geprek Telur Sambel Bawang + Lalapan + Es Teh"
                 android:textColor="#0A0A0A"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,9 +57,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Description"
+                android:layout_gravity="bottom"
+                android:text="IDR 11.000"
                 android:textColor="#3267E3"
-                android:textSize="19sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.099"
                 app:layout_constraintStart_toStartOf="parent"
