--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -18,5 +18,10 @@
         android:icon="@drawable/ic_penjualan"
         android:enabled="true"
         android:title="@string/penjualan" />
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_logout"
+        android:enabled="true"
+        android:title="Logout" />
 
 </menu>
