--- a/app/src/main/res/layout/sidebar_layout.xml
+++ b/app/src/main/res/layout/sidebar_layout.xml
@@ -49,6 +49,7 @@
             android:scaleType="centerCrop" />
 
         <ImageButton
+            android:id="@+id/logoutSide"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_gravity="center"
