--- a/app/src/main/res/layout/checkout_item.xml
+++ b/app/src/main/res/layout/checkout_item.xml
@@ -133,7 +133,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
         <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/materialDivider5"
+            android:id="@+id/hide2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="24dp"
@@ -142,7 +142,7 @@
             app:layout_constraintTop_toBottomOf="@+id/rcyViewCheckOut" />
 
         <LinearLayout
-            android:id="@+id/linearLayout7"
+            android:id="@+id/subTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -151,7 +151,7 @@
             android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialDivider5">
+            app:layout_constraintTop_toBottomOf="@+id/hide2">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -236,7 +236,7 @@
             android:text="@string/lanjutkan_ke_pembayaran"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+            app:layout_constraintTop_toBottomOf="@+id/subTotal" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
