--- a/app/src/main/res/layout/fragment_pop_up_pembayaran.xml
+++ b/app/src/main/res/layout/fragment_pop_up_pembayaran.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/totalBayarCheckOut"
         android:layout_width="392dp"
         android:layout_height="40dp"
         android:layout_marginTop="32dp"
@@ -107,7 +107,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText">
+        app:layout_constraintTop_toBottomOf="@+id/totalBayarCheckOut">
 
         <Button
             android:id="@+id/batal"
