--- a/app/src/main/res/layout/checkout_item.xml
+++ b/app/src/main/res/layout/checkout_item.xml
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/filledTextField"
+            android:id="@+id/namaPelanggan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -93,7 +93,7 @@
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/filledTextField" />
+            app:layout_constraintTop_toBottomOf="@+id/namaPelanggan" />
 
         <LinearLayout
             android:id="@+id/linearLayout6"
