--- a/app/src/main/res/layout/fragment_cetak_nota.xml
+++ b/app/src/main/res/layout/fragment_cetak_nota.xml
@@ -47,20 +47,20 @@
         app:layout_constraintTop_toBottomOf="@+id/materialDivider">
 
         <Button
-            android:id="@+id/pilih"
+            android:id="@+id/btnCetakNota"
             android:layout_width="392dp"
             android:layout_height="46dp"
             android:gravity="center"
-            android:text="Cetak Nota" />
+            android:text="@string/cetak_nota" />
 
         <Button
-            android:id="@+id/batal"
+            android:id="@+id/balikDashboard"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="392dp"
             android:layout_height="46dp"
             android:layout_marginEnd="12dp"
             android:gravity="center"
-            android:text="Kembali Ke Dashboard" />
+            android:text="@string/kembali_ke_dashboard" />
 
 
     </LinearLayout>
