--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -73,7 +73,6 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/filledTextField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -83,6 +82,7 @@
             app:layout_constraintTop_toBottomOf="@+id/materialDivider3">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/namaPelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/masukan_nama_pembeli" />
@@ -97,7 +97,7 @@
             app:layout_constraintBottom_toTopOf="@+id/nested"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/filledTextField" />
+            app:layout_constraintTop_toBottomOf="@+id/namaPelanggan" />
 
 
         <LinearLayout
@@ -256,22 +256,22 @@
             android:id="@+id/containerNoItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="80dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="80dp">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_noitem"/>
+                android:src="@drawable/ic_noitem" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="21dp"
-                android:textSize="16sp"
-                android:textStyle="italic"
                 android:gravity="center"
-                android:text="@string/belum_ada_pesanan"/>
+                android:text="@string/belum_ada_pesanan"
+                android:textSize="16sp"
+                android:textStyle="italic" />
 
 
         </LinearLayout>
@@ -280,9 +280,9 @@
             android:id="@+id/btn_checkOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:text="@string/lanjutkan_ke_pembayaran"
             android:textColor="@android:color/white"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
