--- a/app/src/main/res/layout/fragment_pop_up_edit_menu.xml
+++ b/app/src/main/res/layout/fragment_pop_up_edit_menu.xml
@@ -7,7 +7,7 @@
     android:padding="24dp">
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/holderTitle"
         android:layout_width="392dp"
         android:layout_height="44dp"
         android:orientation="horizontal"
@@ -33,11 +33,11 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        app:layout_constraintTop_toBottomOf="@+id/holderTitle" />
 
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/holderPembayaran"
         android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/materialDivider">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/filledTextField"
+            android:id="@+id/namaPelanggan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/holderPembayaran"
         tools:layout_editor_absoluteX="24dp">
 
         <ImageView
@@ -137,7 +137,7 @@
             android:text="@string/batal" />
 
         <Button
-            android:id="@+id/pilih"
+            android:id="@+id/btn_lanjut_checkOut"
             android:layout_width="280dp"
             android:layout_height="46dp"
             android:gravity="center"
